removing debug and backing a fix for a problem that wasn't